# incredible-squaring-avs-python

./: .dockerignore  .flake8  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  aggregator.py  challenger.py  docker-compose.yml  pyproject.toml  requirements.txt  send_fund.py  setup.py  squaring_operator.py
.github/workflows/: build.yml
abis/: IncredibleSquaringTaskManager.json
aggregator/: README.md  aggregator.py
avs/: aggregator.py  challenger.py  squaring_operator.py
avs-subgraph/: README.md  networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
avs-subgraph/abis/: BLSApkRegistry.json  RegistryCoordinator.json  StakeRegistry.json
avs-subgraph/src/: bls-apk-registry.ts  registry-coordinator.ts  stake-registry.ts
challenger/: README.md  challenger.py
cli/: README.md  main.py
config-files/: aggregator.yaml  avs.yaml  challenger.yaml  operator.anvil.yaml  operator1.yaml  operator2.yaml  operator3.yaml
contracts/: incredible_squaring_config.json
contracts/script/: IncredibleSquaringDeployer.s.sol  ModifyAllocations.s.sol  SetAllocationDelay.s.sol
contracts/script/deployments/core/: 31337.json
contracts/script/deployments/incredible-squaring/: 31337.json
contracts/script/utils/: IncredibleSquaringDeploymentLib.sol
contracts/src/: IncredibleSquaringTaskManager.sol
incredible_squaring_avs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
operator/: README.md  squaring_operator.py
squaring_operator/: squaring_operator.py
tests/: integration.py  mocks.py  test_integration.py
